# shvayambhu

./: README.md  demo_conscious.py  demo_visual.py  docker-compose.yml  example_usage.py  final_training_solution.py  generate_large_dataset.py  generate_ollama_data_direct.py  generate_real_training_data.py  generate_test_data.py  install.sh  interactive_chat.py  mkdocs.yml  pretrain_model.py  pyproject.toml  pytest.ini  quick_train_test.py  quickstart.py  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_example.py  setup.cfg  setup.py  shvayambhu.py  shvayambhu_conscious.py  shvayambhu_conscious_ai.py  shvayambhu_demo.py  shvayambhu_hybrid.py  shvayambhu_production.py  start_training.py  streamlit_app.py  streamlit_demo.py  test_blt_import.py  test_conscious.py  test_current_state.py  test_full_system.py  test_model_inference.py  test_trained_model.py  test_with_postprocessing.py  (+12 more)
core/research/: knowledge_versioning.py  memory_aug.py  relationship_mapper.py  source_tracking.py
core/safety/: safety_engine.py
core/seal/: __init__.py  ab_testing.py  dynamic_lora.py  edit_format.py  edit_generator.py  edit_history.py  edit_validation.py  (+12 more)
docs/: CODING_STANDARDS.md  api_reference.md  architecture.md  architecture_diagram.drawio  banner.md  blt_architecture.drawio  comprehensive_documentation.md  conf.py  index.md  index.rst  metal_optimization_guide.md  training_guide.md
examples/: simple_usage.py
mlx_local/: M4_PRO_PERFORMANCE_BASELINES.md  __init__.py  benchmark_tensor_ops.py  hello_mlx.py  mlx_utils.py  test_int4_quantization.py  test_metal.py  test_unified_memory.py  test_utils.py  utils.py
scripts/: benchmark_blt.py  benchmark_blt_accurate.py  benchmark_blt_flops.py  benchmark_blt_m4_pro.py  benchmark_ollama_simple.py  download_seed_data.py  metal_performance_test.py  setup_environment.sh  test_blt_entropy_only.py  test_blt_multilingual.py  test_blt_simple.py  train_with_synthetic.py  verify_metal_setup.py
shvayambhu/: __init__.py
tests/: conftest.py  test_blt.py  test_suite.py
training/: pipeline.py  self_training.py  train_shvayambhu.py
utils/: __init__.py  compression_test.py  error_handling.py  logging_config.py  text_postprocessing.py
(+63 files in other folders)
